{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 20,
  "lineage": "858bb8d2-bb1f-ce0a-9604-f9edbd90ef7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08000acf5094a05cf",
            "association_id": "eipassoc-02aa93abcd76b5343",
            "domain": "vpc",
            "id": "eipalloc-08000acf5094a05cf",
            "network_border_group": "ap-northeast-3",
            "network_interface": "eni-012a5f524ce8fa0df",
            "private_dns": "ip-10-0-0-231.ap-northeast-3.compute.internal",
            "private_ip": "10.0.0.231",
            "public_dns": "ec2-13-208-78-193.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "13.208.78.193",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:744721539376:internet-gateway/igw-0971d8010984d4fda",
            "id": "igw-0971d8010984d4fda",
            "owner_id": "744721539376",
            "tags": {
              "Name": "terraform-101-igw"
            },
            "tags_all": {
              "Name": "terraform-101-igw"
            },
            "vpc_id": "vpc-00abdec4150d0624e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08000acf5094a05cf",
            "connectivity_type": "public",
            "id": "nat-0e59858a99b5e9b89",
            "network_interface_id": "eni-012a5f524ce8fa0df",
            "private_ip": "10.0.0.231",
            "public_ip": "13.208.78.193",
            "subnet_id": "subnet-0bd7070c819ad73f7",
            "tags": {
              "Name": "terraform-NATGW"
            },
            "tags_all": {
              "Name": "terraform-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f90f2f0d9edce93f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e59858a99b5e9b89",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f90f2f0d9edce93f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:744721539376:route-table/rtb-0f90f2f0d9edce93f",
            "id": "rtb-0f90f2f0d9edce93f",
            "owner_id": "744721539376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e59858a99b5e9b89",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-101-rt-private"
            },
            "tags_all": {
              "Name": "terraform-101-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00abdec4150d0624e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:744721539376:route-table/rtb-017d7d30b32566a91",
            "id": "rtb-017d7d30b32566a91",
            "owner_id": "744721539376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0971d8010984d4fda",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-101-rt-public"
            },
            "tags_all": {
              "Name": "terraform-101-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00abdec4150d0624e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083782db9ca3895ea",
            "route_table_id": "rtb-0f90f2f0d9edce93f",
            "subnet_id": "subnet-02bcd4f94ec4e8bd9"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040bf31ad91fcde57",
            "route_table_id": "rtb-017d7d30b32566a91",
            "subnet_id": "subnet-0bd7070c819ad73f7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:744721539376:subnet/subnet-02bcd4f94ec4e8bd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bcd4f94ec4e8bd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744721539376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-101-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-101-private-subnet"
            },
            "vpc_id": "vpc-00abdec4150d0624e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:744721539376:subnet/subnet-0bd7070c819ad73f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd7070c819ad73f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744721539376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-101-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-101-public-subnet"
            },
            "vpc_id": "vpc-00abdec4150d0624e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:744721539376:vpc/vpc-00abdec4150d0624e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02bc9c2d8464baf50",
            "default_route_table_id": "rtb-019165c759c116d7a",
            "default_security_group_id": "sg-078cc16bc4c69c2ad",
            "dhcp_options_id": "dopt-bb561bd2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00abdec4150d0624e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019165c759c116d7a",
            "owner_id": "744721539376",
            "tags": {
              "Name": "terraform-101"
            },
            "tags_all": {
              "Name": "terraform-101"
            }
          }
        }
      ]
    }
  ]
}